# openHome

./: ApplianceToggle.qml  CMakeLists.txt  GlobalProperties.qml  HomeControlTab.qml  HomeScreen.qml  LockScreen.qml  Main.qml  RoomSelectorTab.qml  appliance.cpp  appliance.h  appliancemodel.cpp  appliancemodel.h  appliancetype.h  icons.cpp  icons.h  main.cpp  resources.qrc  room.h  roommodel.cpp  roommodel.h  switchcontroller.cpp  switchcontroller.h  timecontroller.cpp  timecontroller.h
lottie/: bulb.json
